Fixed search entry error

--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -83,7 +83,7 @@ body, html {
                 <div class="col-2">
                   <div class="nav nav-tabs nav-fill flex-column" role="tablist">
 
-                    <a class="nav-link active" role="tab" data-toggle="tab" aria-controls="summary" aria-selected="true" href="#summary">Summary</a>
+                    <a class="nav-link active" role="tab" data-toggle="tab" aria-controls="summary" aria-selected="true" href="#summary">Design Summary</a>
                     <a class="nav-link" role="tab" data-toggle="tab" aria-controls="regulations" aria-selected="false" href="#regulations">Regulations</a>
                     <a class="nav-link" role="tab" data-toggle="tab" aria-controls="details" aria-selected="false" href="#details">Drawing Details</a>
                     <a class="nav-link" role="tab" data-toggle="tab" aria-controls="specifications" aria-selected="false" href="#specifications"> Specifications</a>
