--- a/app/views/guide_templates/index.html.erb
+++ b/app/views/guide_templates/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>
-    Guide Search Results for: "<%= params.fetch("search_entry") %>"
+    Guide Search Results for: " "
   </h1>
 
   <%= search_form_for @q do |f| %>
