--- a/app/views/text_component_templates/new_form.html.erb
+++ b/app/views/text_component_templates/new_form.html.erb
@@ -56,7 +56,7 @@
   
   
   <button class="btn btn-block btn-outline-secondary">
-    Create text component
+   Add text component
   </button>
 </form>
 
