--- a/app/views/youtube_video_templates/new_form.html.erb
+++ b/app/views/youtube_video_templates/new_form.html.erb
@@ -20,6 +20,8 @@
   <!--  input for tab_id -->
   <div class="form-group">
     <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= params.fetch("tab_id") %>">
+     <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= params.fetch("guide_id") %>">
+    
   </div>
 
   <!-- Label and input for url_link -->
@@ -41,13 +43,13 @@
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
-    Create youtube video
+    Add youtube video
   </button>
 </form>
 
 <hr>
 
-<a href="/guides">
+<a href="/guides/<%= params.fetch("guide_id") %>">
   Go back
 </a>
 </div>
