Fix search in app

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,6 +46,7 @@
           <a href="/users/sign_in" class="nav-link">Sign In</a>
           <a href="/users/sign_up" class="nav-link">Sign Up</a>
           <a href="/about_us" class="nav-link">About Us</a>
+          <a href="#/lessons_learned" class="nav-link">Lessons Learned Blog</a>
         <% else %>
           <div>
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" >
@@ -60,6 +61,7 @@
           </div>
 
           <a href="/about_us" class="nav-link">About Us</a>
+          <a href="#/lessons_learned" class="nav-link">Lessons Learned Blog</a>
         <% end %>
 
       </div>
