--- a/app/views/tab_templates/new_form.html.erb
+++ b/app/views/tab_templates/new_form.html.erb
@@ -28,7 +28,7 @@
 
 
 
-  <!--input for top_id -->
+  <!--input for guide_id -->
   <div class="form-group">
 
     <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= params.fetch("guide_id") %>">
