--- a/app/views/text_component_templates/new_form.html.erb
+++ b/app/views/text_component_templates/new_form.html.erb
@@ -1,4 +1,4 @@
-<script src="https://cdn.ckeditor.com/ckeditor5/11.1.1/classic/ckeditor.js"></script>
+<%= javascript_include_tag Ckeditor.cdn_url %>
 <!-- Validation failure messages -->
 <% if @text_component.present? %>
   <% if @text_component.errors.any? %>
@@ -9,7 +9,7 @@
     <% end %>
   <% end %>
 <% end %>
-
+<div class="container">
 <h1>
   Add a new text component
 </h1>
@@ -22,42 +22,33 @@
     <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= params.fetch("tab_id") %>">
   </div>
 
-  <!-- Label and input for header -->
-  <div class="form-group">
-    <label for="header">
-      Header
-    </label>
 
-    <input type="text" id="header" name="header" class="form-control" value="<%= @text_component.try(:header) %>">
 
+
+ <% @text_component={} %>
+ 
+ <%= form_for @text_component do |f| %>
+ 
+   <!-- Label and input for header -->
+  <div>
+    <%= f.label :header %>
+  </div>
+  <div>
+    <%= f.text_field :header, :class => "form-control" %>
+  </div>
+  <div>
+    <%= f.label :content %>
+  </div>
+  <div>
+    <%= f.cktext_area :content, rows: 10 %>
   </div>
 
-
-  <div class="form-group">
-    <label for="content">
-      Body
-    </label>
-    <textarea name="content" id="editor" value="<%= @text_component.try(:content) %>"></textarea>
-        <script>
-        ClassicEditor
-            .create( document.querySelector( '#editor' ) )
-            .catch( error => {
-                console.error( error );
-            } );
-    </script>
-  </div>
+<% end %> 
   
-  
-  
-  
-  
-
-  
-  
-  
-  <button class="btn btn-block btn-outline-secondary">
+  <button type="submit" class="btn btn-block btn-outline-secondary">
    Add text component
   </button>
+
 </form>
 
 <hr>
@@ -65,3 +56,4 @@
 <a href="/text_components">
   Go back
 </a>
+</div>
