--- a/app/views/resource_templates/edit_form.html.erb
+++ b/app/views/resource_templates/edit_form.html.erb
@@ -35,7 +35,7 @@
       Resource
     </label>
 
-    <input type="file" id="resource" name="resource" class="form-control" value="<%= @resource.try(:resource) %>">
+    <input type="text" id="resource" name="resource" class="form-control" value="<%= @resource.try(:resource) %>">
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
