--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,14 +3,14 @@
 
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130254865-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-130254865-1');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130254865-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      
+      gtag('config', 'UA-130254865-1');
+    </script>
 
     <title>OS Design Guide</title>
     <%= csrf_meta_tags %>
@@ -21,7 +21,7 @@
     <meta name="google-site-verification" content="Ncj69X48IxGWiH6x-4cWnthrl3BRC-rwuOxjrPRMhGk" />
 
     <!-- Connect Font Awesome CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.2/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
     <!-- Connect Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/sandstone/bootstrap.min.css">
@@ -43,25 +43,45 @@
 
       <div class="row justify-content-end" style="margin:10px">
         <% if current_user == nil %>
-          <a href="/users/sign_in" class="nav-link">Sign In</a>
-          <a href="/users/sign_up" class="nav-link">Sign Up</a>
+          <a href="/users/sign_in" class="nav-link">
+            <i class="fas fa-sign-in-alt"></i>
+            Sign In</a>
+          <a href="/users/sign_up" class="nav-link"><i class="fas fa-user-plus"></i>
+            Sign Up</a>
           <a href="/about_us" class="nav-link">About Us</a>
-          <a href="#/lessons_learned" class="nav-link">Lessons Learned Blog</a>
+          <a class="nav-link" href="/guides/new">
+            <i class="fas fa-plus"></i>
+            Create a guide</a>
+          <a href="#/lessons_learned" class="nav-link">
+            <i class="fas fa-newspaper"></i>
+            Lessons Learned Blog</a>
         <% else %>
           <div>
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" >
-
+              <i class="fas fa-user"></i>
               <%= current_user.first_name %> <%= current_user.last_name %>
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="/users/edit">Edit Profile</a>
-              <a class="dropdown-item" href="/users/sign_out" data-method="delete">Log Out</a>
+              <a class="dropdown-item" href="/tracked_guides">
+                <i class="fas fa-eye"></i>
+                View Tracked Guides</a>
+              <a class="dropdown-item" href="/users/edit">
+                <i class="fas fa-user-edit"></i>
+                Edit Profile</a>
+              <a class="dropdown-item" href="/users/sign_out" data-method="delete">
+                <i class="fas fa-power-off"></i>
+                Log Out</a>
 
             </div>
           </div>
 
           <a href="/about_us" class="nav-link">About Us</a>
-          <a href="#/lessons_learned" class="nav-link">Lessons Learned Blog</a>
+          <a class="nav-link" href="/guides/new">
+            <i class="fas fa-plus"></i>
+            Create a guide</a>
+          <a href="#/lessons_learned" class="nav-link">
+            <i class="fas fa-newspaper"></i>
+            Lessons Learned Blog</a>
         <% end %>
 
       </div>
@@ -79,19 +99,22 @@
             <div class="carousel-item active" style="width:800px;height:400px">
               <img class="d-block w-100" src="https://images.freeimages.com/images/large-previews/3a6/rain-on-sea-ii-1368899.jpg" alt="First slide" style="width:100%;height:100%">
               <div class="carousel-caption d-none d-md-block">
-                <h5 style="background:black">Collaboratively created design & construction handbooks</h5>
+                <h5><span style="background:black">OS Design Guide</span></h5>
+                <p><span style="background:black">Contribute your experience and knowledge with a collaborative community of designers</span></p>
               </div>
             </div>
             <div class="carousel-item" style="width:800px;height:400px">
               <img class="d-block w-100" src="https://picjumbo.com/wp-content/uploads/clean-setup-keyboard-and-glossy-desktop-display-2210x1473.jpg" alt="Second slide" style="width:100%;height:100%">
               <div class="carousel-caption d-none d-md-block">
-                <h5 style="background:black">Community discussion around content areas</h5>
+                <h5><span style="background:black">OS Design Guide</span></h5>
+                <p><span style="background:black">Community discussions around guide specific content areas</span></p>
               </div>
             </div>
             <div class="carousel-item" style="width:800px;height:400px">
               <img class="d-block w-100" src="https://picjumbo.com/wp-content/uploads/creative-designer-photographer-workspace-desk-setup-2210x1475.jpg" alt="Third slide" style="width:100%;height:100%">
               <div class="carousel-caption d-none d-md-block">
-                <h5 style="background:black">Stay up to date with the latest developments</h5>
+                <h5><span style="background:black">OS Design Guide</span></h5>
+                <p><span style="background:black">Stay up-to-date with the latest developments</span></p>
               </div>
             </div>
           </div>
@@ -114,13 +137,17 @@
           </div>
           <div class="col">
             <label class="sr-only" for="search_bar"></label>
-            
+
             <input type="text" class="form-control" name="search_entry" id="search_bar" placeholder="Search OS Design Guide" style="min-width:600px;">
 
-            
+
           </div>
           <div class="col">
-            <button class="btn btn-secondary" type="submit">Search</button>
+            <button class="btn btn-secondary" type="submit">
+              <i class="fas fa-search"></i>
+              Search 
+            </button>
+
           </div>
         </form>
       </div>
@@ -131,103 +158,61 @@
 
       <!--List of guides-->
       <div class="row justify-content-center">
-        <h3>Browse Guides by Discipline</h3>
+        <h3>Browse Design Guides by Discipline</h3>
       </div>
 
 
       <!--List of guides by discipline using tabs-->
       <ul class="nav nav-tabs justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active show" data-toggle="tab" href="#<%= disciplines.first.gsub(" ","-") %>"><%= disciplines.first %></a>
-        </li>
-
-
-        <% disciplines.drop(1).each do |discipline| %>
+        <% disciplines.each do |discipline| %>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#<%= discipline.gsub(" ","-") %>"><%= discipline %></a>
+            <a class="nav-link <%= discipline == "Architecture" ? 'active' : '' %>" data-toggle="tab" href="#<%= discipline.gsub(" ","-") %>"><%= discipline %></a>
           </li>
         <% end %>
       </ul>
       <div id="myTabContent" class="tab-content">
-        <div class="tab-pane fade active show" id="<%= disciplines.first.gsub(" ","-") %>">
-          <table class="table">
-            <tr>
 
-              <th>
-                Guide
-              </th>
-              <th>
-                CSI Section
-              </th>
-              <th>
-                Discipline
-              </th>
-              <th>
-              </th>
-            </tr>
-
-            <% @guide.where(:discipline => disciplines.first).each do |guide| %>
+        <% disciplines.each do |discipline| %>
+          <div class="tab-pane fade <%= discipline == "Architecture" ? 'active show' : '' %>" id="<%= discipline.gsub(" ","-") %>">
+            <table class="table">
               <tr>
 
-                <td>
-                  <%= guide.title %>
-                </td>
-                <td>
-                  <%= guide.csi_section %>
-                </td>
-                <td>
-                  <%= guide.discipline %>
-                </td>
-
-                <td>
-                  <a href="/guides/<%= guide.id %>" class="btn btn-primary">
-                    Show guide
-                  </a>
-                </td>
+                <th>
+                  Guide
+                </th>
+                <th>
+                  CSI Section
+                </th>
+                <th>
+                  Discipline
+                </th>
+                <th>
+                </th>
               </tr>
-            <% end %>
-          </table>
-        </div>
-        <% disciplines.drop(1).each do |discipline| %>
-        <div class="tab-pane fade" id="<%= discipline.gsub(" ","-") %>">
-          <table class="table">
-            <tr>
 
-              <th>
-                Guide
-              </th>
-              <th>
-                CSI Section
-              </th>
-              <th>
-                Discipline
-              </th>
-              <th>
-              </th>
-            </tr>
+              <% @guide.where(:discipline => discipline).each do |guide| %>
+                <tr>
 
-            <% @guide.where(:discipline => discipline).each do |guide| %>
-              <tr>
+                  <td>
+                    <%= guide.title %>
+                  </td>
+                  <td>
+                    <%= guide.csi_section %>
+                  </td>
+                  <td>
+                    <%= guide.discipline %>
+                  </td>
 
-                <td>
-                  <%= guide.title %>
-                </td>
-                <td>
-                  <%= guide.csi_section %>
-                </td>
-                <td>
-                  <%= guide.discipline %>
-                </td>
-
-                <td>
-                  <a href="/guides/<%= guide.id %>" class="btn btn-primary">
-                    Show guide
-                  </a>
-                </td>
-              </tr>
-            <% end %>
-          </table>
-        </div>
+                  <td>
+                    <a href="/guides/<%= guide.id %>" class="btn btn-primary">
+                      <i class="fas fa-glasses"></i>
+                      View Guide
+                    </a>
+                  </td>
+                </tr>
+              <% end %>
+            </table>
+          </div>
         <% end %>
 
       </div>
@@ -244,7 +229,7 @@
 
 
         <div class="col-md-2">
-          <div class="card border-primary mb-3" style="max-width: 20rem;">
+          <div class="card border-primary mb-3">
             <h6 class="card-header">Recent Changes</h6>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Vertical Curve Design</li>
@@ -256,7 +241,7 @@
         </div>
 
         <div class="col-md-2">
-          <div class="card border-primary mb-3" style="max-width: 20rem;">
+          <div class="card border-primary mb-3">
             <div class="card-header">Construction</div>
             <div class="card-body">
               <h4 class="card-title">Estimating</h4>
