--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <meta charset="utf-8">
 
     <!-- Connect Font Awesome CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.2/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
     <!-- Connect Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/sandstone/bootstrap.min.css">
@@ -65,37 +65,49 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/guides/new">Create a guide</a>
+            <a class="nav-link" href="/guides/new">
+              <i class="fas fa-plus"></i>
+              Create a guide</a>
           </li>
         </ul>
         <ul class="navbar-nav">
           <% if current_user == nil %>
             <li class="nav-item">
               <a href="/users/sign_in" class="nav-link" >
+                <i class="fas fa-sign-in-alt"></i>
                 Sign in
               </a>
             </li>
             <li class="nav-item">
               <a href="/users/sign_up" class="nav-link" >
+                <i class="fas fa-user-plus"></i>
                 Sign Up
               </a>
             </li>
           <% else %>
             <li class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" >
-
+                <i class="fas fa-user"></i>
                 <%= current_user.first_name %> <%= current_user.last_name %>
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="/tracked_guides">View Tracked Guides</a>
-                <a class="dropdown-item" href="/users/edit">Edit Profile</a>
-                <a class="dropdown-item" href="/users/sign_out" data-method="delete">Log Out</a>
+                <a class="dropdown-item" href="/tracked_guides">
+                  <i class="fas fa-eye"></i>
+                  View Tracked Guides</a>
+                <a class="dropdown-item" href="/users/edit">
+                  <i class="fas fa-user-edit"></i>
+                  Edit Profile</a>
+                <a class="dropdown-item" href="/users/sign_out" data-method="delete">
+                  <i class="fas fa-power-off"></i>
+                  Log Out</a>
 
               </div>
             </li>
 
           <% end %>
-          <a href="#/lessons_learned" class="nav-link">Lessons Learned Blog</a>
+          <a href="#/lessons_learned" class="nav-link">
+            <i class="fas fa-newspaper"></i>
+            Lessons Learned Blog</a>
 
           <li class="nav-item">
             <form class="form-inline my-2 my-lg-0" action="/guides">
