--- a/app/views/text_component_templates/edit_form.html.erb
+++ b/app/views/text_component_templates/edit_form.html.erb
@@ -14,11 +14,16 @@
 <hr>
 <div class="container">
 <form action="/update_text_component/<%= @text_component.id %>" method="post">
-  <!-- Label and input for tab_id -->
+  <!--input for guide_id -->
   <div class="form-group">
 
+    <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= params.fetch("guide_id") %>">
+  </div>
+    <!-- input for tab_id -->
+  <div class="form-group">
     <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= params.fetch("tab_id") %>">
   </div>
+
 
   <!-- Label and input for header -->
   <div class="form-group">
@@ -26,9 +31,15 @@
       Header
     </label>
 
-    <input type="text" id="header" name="header" class="form-control" value="<%= @text_component.header %>">
+    <input type="text" id="header" name="header" class="form-control" value="<%= @text_component.try(:header) %>">
   </div>
+  <div class="form-group">
+    <label for="content">
+      Content
+    </label>
 
+    <textarea id="content" name="content" class="ckeditor" rows="10" value="<%= @text_component.try(:content) %>"></textarea>
+  </div>
   <button class="btn btn-block btn-outline-secondary">
     Update text component
   </button>
@@ -36,10 +47,10 @@
 </div>
 
 <hr>
-<a href="/delete_text_component/<%= @text_component.id %>">
+<a href="/delete_text_component/<%= @text_component.id %>" data-confirm="Are you sure?">
   Delete text component
 </a>
 <div></div>
-<a href="/guides">
+<a href="/guides/<%= params.fetch("guide_id") %>">
   Go back
 </a>
