--- a/app/views/text_component_templates/new_form.html.erb
+++ b/app/views/text_component_templates/new_form.html.erb
@@ -16,44 +16,42 @@
 
 <hr>
 
+
 <form action="/create_text_component" method="post">
-  <!-- input for tab_id -->
+  <!-- Label and input for header -->
+  <div class="form-group">
+    <label for="header">
+      Header
+    </label>
+
+    <input type="text" id="header" name="header" class="form-control" value="<%= @text_component.try(:header) %>">
+  </div>
+  
+  <div class="form-group">
+    <label for="content">
+      Content
+    </label>
+
+    <textarea id="content" name="content" class="ckeditor" rows="10" value="<%= @text_component.try(:content) %>"></textarea>
+  </div>
+  <!--input for guide_id -->
+  <div class="form-group">
+
+    <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= params.fetch("guide_id") %>">
+  </div>
+    <!-- input for tab_id -->
   <div class="form-group">
     <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= params.fetch("tab_id") %>">
   </div>
 
-
-
-
- <% @text_component={} %>
- 
- <%= form_for @text_component do |f| %>
- 
-   <!-- Label and input for header -->
-  <div>
-    <%= f.label :header %>
-  </div>
-  <div>
-    <%= f.text_field :header, :class => "form-control" %>
-  </div>
-  <div>
-    <%= f.label :content %>
-  </div>
-  <div>
-    <%= f.cktext_area :content, rows: 10 %>
-  </div>
-
-<% end %> 
-  
   <button type="submit" class="btn btn-block btn-outline-secondary">
-   Add text component
+   Add Text Component
   </button>
-
 </form>
 
 <hr>
 
-<a href="/text_components">
+<a href="/guides/<%= params.fetch("guide_id")%>">
   Go back
 </a>
 </div>
