--- a/app/views/tracked_guide_templates/index.html.erb
+++ b/app/views/tracked_guide_templates/index.html.erb
@@ -11,7 +11,7 @@
       <th>
         Guide
       </th>
-      
+
       <th>
         Discipline
       </th>
@@ -41,19 +41,19 @@
         <td>
           <form action="guides/<%= tracked_guide.guide_id %>">
             <button type="submit" class="btn btn-link">
-              View the guide
-                   <i class="fas fa-eye"></i>
-              </button>
+              <i class="fas fa-glasses"></i>
+              View Guide
+            </button>
           </form>
-            <form action="/delete_tracked_guide/<%= tracked_guide.id %>">
-              <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= tracked_guide.guide_id %>">
-              <button type="submit" class="btn btn-link">
-                Untrack this guide
-                <i class="fas fa-bookmark"></i>
-              </button>
-            </form>
-          </td>
-        </tr>
-      <% end %>
-    </table>
-  </div>
+          <form action="/delete_tracked_guide/<%= tracked_guide.id %>">
+            <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= tracked_guide.guide_id %>">
+            <button type="submit" class="btn btn-link">
+              <i class="fas fa-eye-slash"></i>
+              Untrack Guide
+            </button>
+          </form>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+</div>
