--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -255,7 +255,7 @@
 
       <div class="row justify-content-center">
 
-        <p class="text-muted">Open Source Design Guide</p>
+        <p class="text-muted">Open Source Design Guide 2018</p>
       </div>
 
     </div>
