--- a/app/views/guide_templates/show.html.erb
+++ b/app/views/guide_templates/show.html.erb
@@ -3,7 +3,7 @@
 
   <head>
 
-    <!--    Script to hide delete link on edit guide modal-->
+    <!--    Script to hide delete link on modals-->
     <script>
       $(function() {
         $('a#show_more').click(function(event){
@@ -416,7 +416,7 @@
                       <i class="far fa-edit"></i>
                       Edit YoutubeVideo
                     </button>
-                    <!-- edit guide Modal -->
+                    <!-- edit youtube Modal -->
                     <div class="modal fade" id="YoutubeVideoEditModalCenter" tabindex="-1" role="dialog" aria-labelledby="YoutubeVideoEditModalCenterTitle" aria-hidden="true">
                       <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
@@ -456,7 +456,7 @@
                         </div>
                       </div>
                     </div>
-                    <!--END edit guide MODAL-->
+                    <!--END edit youtube MODAL-->
                   <% end %>
                   <hr>
                 <% end %>
