--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,226 +39,113 @@
   </head>
 
   <body>
+    <%= render 'layouts/header' %>
+
     <div class="container">
 
-      <div class="row justify-content-end" style="margin:10px">
-        <% if current_user == nil %>
-          <a href="/users/sign_in" class="nav-link">
-            <i class="fas fa-sign-in-alt"></i>
-            Sign In</a>
-          <a href="/users/sign_up" class="nav-link"><i class="fas fa-user-plus"></i>
-            Sign Up</a>
-          <a href="/about_us" class="nav-link">About Us</a>
-          <a class="nav-link" href="/guides/new">
-            <i class="fas fa-plus"></i>
-            Create a guide</a>
-          <a href="#/lessons_learned" class="nav-link">
-            <i class="fas fa-newspaper"></i>
-            Lessons Learned Blog</a>
-        <% else %>
-          <div>
-            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" >
-              <i class="fas fa-user"></i>
-              <%= current_user.first_name %> <%= current_user.last_name %>
-            </a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="/tracked_guides">
-                <i class="fas fa-eye"></i>
-                View Tracked Guides</a>
-              <a class="dropdown-item" href="/users/edit">
-                <i class="fas fa-user-edit"></i>
-                Edit Profile</a>
-              <a class="dropdown-item" href="/users/sign_out" data-method="delete">
-                <i class="fas fa-power-off"></i>
-                Log Out</a>
-
-            </div>
-          </div>
-
-          <a href="/about_us" class="nav-link">About Us</a>
-          <a class="nav-link" href="/guides/new">
-            <i class="fas fa-plus"></i>
-            Create a guide</a>
-          <a href="#/lessons_learned" class="nav-link">
-            <i class="fas fa-newspaper"></i>
-            Lessons Learned Blog</a>
-        <% end %>
-
-      </div>
-
-
-      <!--Home image carousel-->
-      <div class="row justify-content-center" style="margin:10px">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active" style="width:800px;height:400px">
-              <img class="d-block w-100" src="https://images.freeimages.com/images/large-previews/3a6/rain-on-sea-ii-1368899.jpg" alt="First slide" style="width:100%;height:100%">
-              <div class="carousel-caption d-none d-md-block">
-                <h5><span style="background:black">OS Design Guide</span></h5>
-                <p><span style="background:black">Contribute your experience and knowledge with a collaborative community of designers</span></p>
+          <!--Home image carousel-->
+          <div class="row justify-content-center" style="margin:10px">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active" style="width:auto;height:400px">
+                  <img class="d-block w-100" src="https://cdnassets.hw.net/8b/16/ad10b7644b379890958adca8b519/construction.jpg" alt="First slide" style="height:100%">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5><span style="background:black">OS Design Guide</span></h5>
+                    <p><span style="background:black">Contribute your experience and knowledge with a collaborative community of designers</span></p>
+                  </div>
+                </div>
+                <div class="carousel-item" style="width:auto;height:400px">
+                  <img class="d-block w-100" src="https://picjumbo.com/wp-content/uploads/clean-setup-keyboard-and-glossy-desktop-display-2210x1473.jpg" alt="Second slide" style="height:100%">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5><span style="background:black">OS Design Guide</span></h5>
+                    <p><span style="background:black">Community discussions around guide specific content areas</span></p>
+                  </div>
+                </div>
+                <div class="carousel-item" style="width:auto;height:400px">
+                  <img class="d-block w-100" src="https://picjumbo.com/wp-content/uploads/creative-designer-photographer-workspace-desk-setup-2210x1475.jpg" alt="Third slide" style="height:100%">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5><span style="background:black">OS Design Guide</span></h5>
+                    <p><span style="background:black">Stay up-to-date with the latest developments</span></p>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="carousel-item" style="width:800px;height:400px">
-              <img class="d-block w-100" src="https://picjumbo.com/wp-content/uploads/clean-setup-keyboard-and-glossy-desktop-display-2210x1473.jpg" alt="Second slide" style="width:100%;height:100%">
-              <div class="carousel-caption d-none d-md-block">
-                <h5><span style="background:black">OS Design Guide</span></h5>
-                <p><span style="background:black">Community discussions around guide specific content areas</span></p>
-              </div>
-            </div>
-            <div class="carousel-item" style="width:800px;height:400px">
-              <img class="d-block w-100" src="https://picjumbo.com/wp-content/uploads/creative-designer-photographer-workspace-desk-setup-2210x1475.jpg" alt="Third slide" style="width:100%;height:100%">
-              <div class="carousel-caption d-none d-md-block">
-                <h5><span style="background:black">OS Design Guide</span></h5>
-                <p><span style="background:black">Stay up-to-date with the latest developments</span></p>
-              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
 
 
-      <!--Search bar-->
-      <div class="row justify-content-center">
-        <form class="form-row" action="/guides" >
-          <div class="col">
-          </div>
-          <div class="col">
-            <label class="sr-only" for="search_bar"></label>
-
-            <input type="text" class="form-control" name="search_entry" id="search_bar" placeholder="Search OS Design Guide" style="min-width:600px;">
-
-
-          </div>
-          <div class="col">
-            <button class="btn btn-secondary" type="submit">
-              <i class="fas fa-search"></i>
-              Search 
-            </button>
-
-          </div>
-        </form>
-      </div>
-
-
-      <hr class="my-4">
-
-
-      <!--List of guides-->
-      <div class="row justify-content-center">
-        <h3>Browse Design Guides by Discipline</h3>
-      </div>
-
-
-      <!--List of guides by discipline using tabs-->
-      <ul class="nav nav-tabs justify-content-center">
-        <% disciplines.each do |discipline| %>
-          <li class="nav-item">
-            <a class="nav-link <%= discipline == "Architecture" ? 'active' : '' %>" data-toggle="tab" href="#<%= discipline.gsub(" ","-") %>"><%= discipline %></a>
-          </li>
-        <% end %>
-      </ul>
-      <div id="myTabContent" class="tab-content">
-
-        <% disciplines.each do |discipline| %>
-          <div class="tab-pane fade <%= discipline == "Architecture" ? 'active show' : '' %>" id="<%= discipline.gsub(" ","-") %>">
-            <table class="table">
-              <tr>
-
-                <th>
-                  Guide
-                </th>
-                <th>
-                  CSI Section
-                </th>
-                <th>
-                  Discipline
-                </th>
-                <th>
-                </th>
-              </tr>
-
-              <% @guide.where(:discipline => discipline).each do |guide| %>
-                <tr>
-
-                  <td>
-                    <%= guide.title %>
-                  </td>
-                  <td>
-                    <%= guide.csi_section %>
-                  </td>
-                  <td>
-                    <%= guide.discipline %>
-                  </td>
-
-                  <td>
-                    <a href="/guides/<%= guide.id %>" class="btn btn-primary">
-                      <i class="fas fa-glasses"></i>
-                      View Guide
-                    </a>
-                  </td>
-                </tr>
-              <% end %>
-            </table>
-          </div>
-        <% end %>
-
-      </div>
-
-      <hr class="my-4">
-
-      <!--List of changes-->
-      <div class="row justify-content-center">
-        <h3>Recent Changes</h3>
-      </div>
-
-
-      <div class="row justify-content-center">
-
-
-        <div class="col-md-2">
-          <div class="card border-primary mb-3">
-            <h6 class="card-header">Recent Changes</h6>
+        <!--Cards-->
+        <div class="row justify-content-center"> 
+          <div class="card border-primary mb-3" style="margin:20px; max-height: 200px;overflow-y: auto;">
+            <h6 class="card-header text-white" style="background-color:#3E3F3A;">Browse Guides by Discipline</h6>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Vertical Curve Design</li>
-              <li class="list-group-item">Horizontal Curve Design</li>
-              <li class="list-group-item">Traffic Signal Timing</li>
+              <% disciplines.each do |discipline| %>
+                <% if discipline == "" %>
+                <% else %>
+                  <li class="list-group-item" style="padding:0;">
+                    <form action="/guides">
+                      <input class="form-control" type="hidden" name="search_entry" id="search_entry" value="">
+                      <input class="form-control" type="hidden" name="discipline" id="discipline" value="<%= discipline %>">
+                      <button class="btn btn-link" type="submit">
+                       <small><%= discipline %></small>
+                        <span class="badge badge-primary badge-pill"><%= Guide.where(:discipline => discipline).count %></span>
+                      </button>
+                    </form>
+                  </li>
+                <% end %>
+              <% end %>
             </ul>
           </div>
-
-        </div>
-
-        <div class="col-md-2">
-          <div class="card border-primary mb-3">
-            <div class="card-header">Construction</div>
-            <div class="card-body">
-              <h4 class="card-title">Estimating</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
+          
+          <div class="card border-primary mb-3 offset-mb-1" style="margin:20px; max-height: 200px;overflow-y: auto;">
+            <h6 class="card-header text-white" style="background-color:#3E3F3A;">Recent Guide Changes</h6>
+            <ul class="list-group list-group-flush">
+              <% disciplines.each do |discipline| %>
+                <% if discipline == "" %>
+                <% else %>
+                  <li class="list-group-item" style="padding:5px;">
+                    <small><%= discipline %></small>
+                    <span class="badge badge-primary badge-pill"><%= Guide.where(:discipline => discipline).count %></span>
+                  </li>
+                <% end %>
+              <% end %>
+            </ul>
           </div>
-
+     
+        
+          <div class="card border-primary mb-3 offset-mb-1" style="margin:20px; max-height: 200px;overflow-y: auto;">
+            <h6 class="card-header text-white" style="background-color:#3E3F3A;">Recent Guide Changes</h6>
+            <ul class="list-group list-group-flush">
+              <% disciplines.each do |discipline| %>
+                <% if discipline == "" %>
+                <% else %>
+                  <li class="list-group-item" style="padding:5px;">
+                    <small><%= discipline %></small>
+                    <span class="badge badge-primary badge-pill"><%= Guide.where(:discipline => discipline).count %></span>
+                  </li>
+                <% end %>
+              <% end %>
+            </ul>
+          </div>
         </div>
-      </div>
+        <!--END CARDS-->
 
 
-      <div class="row justify-content-center">
-
-        <p class="text-muted">Open Source Design Guide 2018</p>
-      </div>
 
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 
 
