--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,80 +49,14 @@
   </head>
 
   <body>
+    
+<%= render 'layouts/header' %>
 
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="/">OS Design Guide</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a href="/about_us" class="nav-link">
-              About Us
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/guides/new">
-              <i class="fas fa-plus"></i>
-              Create a guide</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav">
-          <% if current_user == nil %>
-            <li class="nav-item">
-              <a href="/users/sign_in" class="nav-link" >
-                <i class="fas fa-sign-in-alt"></i>
-                Sign in
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="/users/sign_up" class="nav-link" >
-                <i class="fas fa-user-plus"></i>
-                Sign Up
-              </a>
-            </li>
-          <% else %>
-            <li class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" >
-                <i class="fas fa-user"></i>
-                <%= current_user.first_name %> <%= current_user.last_name %>
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="/tracked_guides">
-                  <i class="fas fa-eye"></i>
-                  View Tracked Guides</a>
-                <a class="dropdown-item" href="/users/edit">
-                  <i class="fas fa-user-edit"></i>
-                  Edit Profile</a>
-                <a class="dropdown-item" href="/users/sign_out" data-method="delete">
-                  <i class="fas fa-power-off"></i>
-                  Log Out</a>
-
-              </div>
-            </li>
-
-          <% end %>
-          <a href="#/lessons_learned" class="nav-link">
-            <i class="fas fa-newspaper"></i>
-            Lessons Learned Blog</a>
-
-          <li class="nav-item">
-            <form class="form-inline my-2 my-lg-0" action="/guides">
-              <label class="sr-only" for="search_bar"></label>
-              <input class="form-control mr-sm-2" type="text" name="search_entry" id="search_bar"  placeholder="Search">
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
-          </li>
-        </ul>
-      </div>
-    </nav>
 
 
     <%= yield %>
 
+<%= render 'layouts/footer' %>
 
     <%= dev_tools if Rails.env.development? %>
   </body>
